# doping-rag

./: .Rhistory  .env.example  .gitignore  CLAUDE.md  DECISIONS.md  EXPERIMENTS.md  docker-compose.yml  main.py  pyproject.toml
data/eval/: v1.json
data/raw/: sources.json
src/: config.py
src/evaluation/: annotate.py  dataset.py
src/generation/: answer.py  llm.py
src/ingestion/: chunk.py  load.py
src/retrieval/: client.py  embed.py  index.py  search.py
tests/: test_chunk.py
