[project]
name = "doping-rag"
version = "0.1.0"
description = "RAG system over WADA anti-doping regulations, with a versioned evaluation harness"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "mistralai<2",
    "openai>=2.41.1",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "qdrant-client>=1.18.0",
    "tiktoken>=0.13.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
